--- a/index.html
+++ b/index.html
@@ -1,230 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>BCATS Student Submission</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BCATS Submission</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
-    body {font-family:Arial,sans-serif;max-width:900px;margin:2rem auto;padding:1rem;background:#f8f9fa;color:#2c3e50;line-height:1.6;}
-    h1,h2{text-align:center;color:#2c3e50;}
-    .big-btn{display:block;width:100%;padding:1.3rem;margin:1.5rem 0;font-size:1.4rem;font-weight:bold;
-      border:none;border-radius:12px;color:white;cursor:pointer;box-shadow:0 6px 20px rgba(0,0,0,0.2);transition:0.2s;}
-    .big-btn:hover{transform:translateY(-4px);box-shadow:0 12px 30px rgba(0,0,0,0.3);}
-    .btn-purple{background:#9b59b6;}.btn-green{background:#27ae60;}.btn-orange{background:#e67e22;}.btn-blue{background:#3498db;}
-    label{display:block;margin-top:1.2rem;font-weight:bold;}
-    input,textarea,select{width:100%;padding:0.9rem;margin-top:0.4rem;border:2px solid #ddd;border-radius:8px;font-size:1rem;}
-    .question-block{background:white;padding:1.3rem;border-radius:10px;margin:1.5rem 0;box-shadow:0 3px 15px rgba(0,0,0,0.1);}
-    .hidden{display:none;}
-    .note{background:#e3f2fd;padding:1.2rem;border-left:5px solid #3498db;border-radius:8px;margin:1.5rem 0;}
-    .authenticity{background:#fff8e1;padding:1.2rem;border-left:5px solid #f39c12;border-radius:8px;margin:1.5rem 0;text-align:center;font-weight:bold;}
-    #grade-display{background:#d5f4e6;padding:1.5rem;border-radius:12px;text-align:center;font-size:1.5rem;margin:2rem 0;}
+    body {font-family:Arial,sans-serif;max-width:900px;margin:40px auto;padding:20px;background:#f9f9f9;color:#333;}
+    h1 {text-align:center;color:#2c3e50;}
+    .btn {display:block;width:100%;padding:18px;margin:20px 0;font-size:20px;border:none;border-radius:12px;color:white;cursor:pointer;}
+    .btn:hover {opacity:0.9;transform:scale(1.02);}
+    .purple {background:#8e44ad;}
+    .green {background:#27ae60;}
+    .orange {background:#e67e22;}
+    input,select,textarea {width:100%;padding:12px;margin:8px 0;border:2px solid #ddd;border-radius:8px;font-size:16px;}
+    .q {background:white;padding:15px;margin:15px 0;border-radius:10px;box-shadow:0 2px 10px rgba(0,0,0,0.1);}
+    .hidden {display:none;}
+    .secret {background:#fff3cd;padding:15px;border-left:5px solid #f39c12;text-align:center;font-weight:bold;}
   </style>
 </head>
 <body>
 
-  <h1>BCATS Student Submission</h1>
+<h1>BCATS Materials Self-Reflection</h1>
 
-  <div id="form-view">
-    <div class="note">
-      Answer → Click purple button → Auto-graded → Email with PDF!
-    </div>
+<div id="form">
+  <input type="text" id="name" placeholder="Full Name *" required>
+  <input type="text" id="id" placeholder="Student ID *" required>
+  <select id="teacher">
+    <option value="">Choose Teacher</option>
+  </select>
 
-    <form id="task-form">
-      <label>Student ID: <span style="color:red">*</span></label>
-      <input type="text" id="studentId" required />
-
-      <label>Full Name: <span style="color:red">*</span></label>
-      <input type="text" id="studentName" required />
-
-      <label>Teacher:</label>
-      <select id="teacherSelect" required></select>
-
-      <label>Task:</label>
-      <select id="taskSelect" required></select>
-
-      <label>Class (optional):</label>
-      <input type="text" id="className" placeholder="e.g. 11BCAT" />
-
-      <div id="questions-container"></div>
-
-      <div class="authenticity">
-        Type "<span id="secret-word">…</span>" to prove it’s your work:
-        <input type="text" id="auth-check" style="margin-top:10px;" placeholder="secret word" />
-      </div>
-
-      <button type="button" id="load-button" class="big-btn btn-blue">Load Saved Work</button>
-      <button type="submit" class="big-btn btn-purple">Submit & Auto-Grade</button>
-      <button type="button" id="email-button" class="big-btn btn-green">Email Teacher with PDF</button>
-    </form>
+  <div class="secret">
+    Type the word "<span id="word"></span>" to prove it's your work:<br>
+    <input type="text" id="check" placeholder="type here">
   </div>
 
-  <div id="summary-view" class="hidden">
-    <h2>All Done!</h2>
-    <p style="text-align:center;font-size:1.4rem;" id="summary-header"></p>
-    <div id="grade-display">Calculating…</div>
-    <div id="summary-questions"></div>
-    <button id="back-button" class="big-btn btn-orange">Edit Answers</button>
-  </div>
+  <div id="questions"></div>
 
-  <!-- Load questions.js FIRST -->
-  <script src="questions.js"></script>
+  <button class="btn purple" onclick="submitWork()">Submit & Grade</button>
+  <button class="btn green" onclick="emailWork()">Email Teacher with PDF</button>
+</div>
 
-  <!-- Main script – NO checks that could break loading -->
-  <script>
-    const { jsPDF } = window.jspdf;
-    const STORAGE_PREFIX = "bcats_";
+<div id="result" class="hidden">
+  <h2>All Done <span id="student"></span>!</h2>
+  <h1 style="color:#27ae60;text-align:center;" id="grade">0/37</h1>
+  <div id="answers"></div>
+  <button class="btn orange" onclick="back()">Edit Answers</button>
+</div>
 
-    // Random secret word
-    const words = ["kiwi", "tui", "pohutukawa", "manuka", "kowhai", "rata", "rimu", "kauri"];
-    const secretWord = words[Math.floor(Math.random() * words.length)];
-    document.getElementById("secret-word").textContent = secretWord;
+<!-- Load your questions.js first -->
+<script src="questions.js"></script>
 
-    // Just use TEACHERS and TASKS directly – like your original working version
-    TEACHERS.forEach(t => teacherSelect.add(new Option(t.name, t.id)));
-    TASKS.forEach(t => taskSelect.add(new Option(t.name, t.id)));
+<script>
+// Secret word
+const words = ["kiwi","tui","pohutukawa","manuka","kowhai","rata"];
+const secret = words[Math.floor(Math.random()*words.length)];
+document.getElementById("word").textContent = secret;
 
-    function getCurrentTask() {
-      return TASKS.find(t => t.id === taskSelect.value) || TASKS[0];
-    }
+// Fill teacher dropdown
+TEACHERS.forEach(t => {
+  const o = document.createElement("option");
+  o.value = t.email; o.textContent = t.name;
+  document.getElementById("teacher").appendChild(o);
+});
 
-    function getStorageKey() {
-      const id = studentId.value.trim();
-      const task = getCurrentTask();
-      return id ? `${STORAGE_PREFIX}${id}_${task.id}` : null;
-    }
+// Show questions
+const task = TASKS[0]; // Materials task
+task.questions.forEach((q,i) => {
+  const div = document.createElement("div");
+  div.className = "q";
+  div.innerHTML = `<strong>Q${i+1} (${q.maxPoints} pts)</strong><br>${q.text}<br>
+    ${q.type==="long" ? '<textarea rows="4" id="a'+q.id+'"></textarea>' : '<input type="text" id="a'+q.id+'">'}
+  `;
+  document.getElementById("questions").appendChild(div);
+});
 
-    function renderQuestions(task, saved = {}) {
-      questionsContainer.innerHTML = "";
-      task.questions.forEach((q, i) => {
-        const block = document.createElement("div");
-        block.className = "question-block";
-        block.innerHTML = `
-          <strong>Q${i+1} (${q.maxPoints} pts):</strong> ${q.text}<br>
-          ${q.type === "long" 
-            ? `<textarea rows="5" name="q_${q.id}">${saved[q.id] || ""}</textarea>`
-            : `<input type="text" name="q_${q.id}" value="${saved[q.id] || ""}">`}
-        `;
-        questionsContainer.appendChild(block);
+function getAnswer(id) {
+  const el = document.getElementById("a"+id);
+  return el ? el.value.trim() : "";
+}
+
+function gradeIt() {
+  let score = 0;
+  task.questions.forEach(q => {
+    const ans = getAnswer(q.id);
+    if (q.rubric) {
+      q.rubric.forEach(r => {
+        if (r.check.test(ans)) score += r.points;
       });
     }
+  });
+  return score;
+}
 
-    function collectData() {
-      if (authCheck.value.trim().toLowerCase() !== secretWord) {
-        alert(`Secret word is "${secretWord}"`);
-        return null;
-      }
-      const task = getCurrentTask();
-      const answers = task.questions.map(q => ({
-        id: q.id, question: q.text,
-        answer: document.querySelector(`[name="q_${q.id}"]`).value.trim()
-      }));
-      return {
-        studentId: studentId.value.trim(),
-        studentName: studentName.value.trim(),
-        className: className.value.trim(),
-        teacher: TEACHERS.find(t => t.id === teacherSelect.value),
-        taskName: task.name,
-        totalPoints: task.totalPoints,
-        answers,
-        submittedAt: new Date().toLocaleString()
-      };
-    }
+window.submitWork = function() {
+  if (document.getElementById("check").value !== secret) {
+    alert("Secret word wrong! It is: " + secret);
+    return;
+  }
+  if (!document.getElementById("name").value || !document.getElementById("id").value) {
+    alert("Name and ID required");
+    return;
+  }
 
-    function autoGrade(data) {
-      const task = getCurrentTask();
-      let earned = 0;
-      data.answers.forEach(a => {
-        const q = task.questions.find(qq => qq.id === a.id);
-        if (q?.rubric) {
-          q.rubric.forEach(r => {
-            if (r.check.test(a.answer)) earned += r.points;
-          });
-        }
-      });
-      const pct = Math.round((earned / task.totalPoints) * 100);
-      const letter = earned >= 33 ? "A" : earned >= 26 ? "B" : earned >= 19 ? "C" : earned >= 11 ? "D" : "E";
-      return { score: `${earned}/${task.totalPoints}`, letter, pct };
-    }
+  const points = gradeIt();
+  const pct = Math.round((points / 37) * 100);
 
-    async function generatePDF(data, grade) {
-      const doc = new jsPDF();
-      let y = 25;
-      doc.setFontSize(18);
-      doc.text(`${data.studentName} – ${data.taskName}`, 105, y, {align:"center"});
-      y += 20;
-      doc.setFontSize(20);
-      doc.text(`GRADE: ${grade.score} (${grade.letter} – ${grade.pct}%)`, 105, y, {align:"center"});
-      y += 30;
-      data.answers.forEach((a, i) => {
-        if (y > 260) { doc.addPage(); y = 20; }
-        doc.setFontSize(11);
-        doc.setFont("helvetica","bold");
-        doc.text(`Q${i+1}: ${a.question}`, 15, y);
-        y += 8;
-        doc.setFont("helvetica","normal");
-        doc.splitTextToSize(a.answer || "(no answer)", 180).forEach(line => {
-          doc.text(line, 20, y); y += 7;
-        });
-        y += 10;
-      });
-      return doc.output('blob');
-    }
+  document.getElementById("student").textContent = document.getElementById("name").value;
+  document.getElementById("grade").textContent = points + "/37 (" + pct + "%)";
 
-    taskForm.addEventListener("submit", e => {
-      e.preventDefault();
-      const data = collectData();
-      if (!data) return;
-      const grade = autoGrade(data);
-      localStorage.setItem(getStorageKey(), JSON.stringify({data, grade}));
+  document.getElementById("answers").innerHTML = "";
+  task.questions.forEach((q,i) => {
+    const div = document.createElement("div");
+    div.className = "q";
+    div.innerHTML = `<strong>Q${i+1}:</strong> ${q.text}<br><em>${getAnswer(q.id)||"(no answer)"}</em>`;
+    document.getElementById("answers").appendChild(div);
+  });
 
-      summaryHeader.textContent = `${data.studentName} → ${data.teacher.name}`;
-      gradeDisplay.innerHTML = `<strong>${grade.score}</strong> (${grade.letter}) – ${grade.pct}%`;
-      summaryQuestions.innerHTML = "";
-      data.answers.forEach((a,i) => {
-        const div = document.createElement("div");
-        div.className = "question-block";
-        div.innerHTML = `<strong>Q${i+1}:</strong> ${a.question}<br><em>${a.answer||"(empty)"}</em>`;
-        summaryQuestions.appendChild(div);
-      });
-      formView.classList.add("hidden");
-      summaryView.classList.remove("hidden");
-      window.current = {data, grade};
-    });
+  window.finalData = {
+    name: document.getElementById("name").value,
+    id: document.getElementById("id").value,
+    teacher: document.getElementById("teacher").selectedOptions[0].textContent,
+    email: document.getElementById("teacher").value,
+    points: points,
+    pct: pct
+  };
 
-    loadButton.onclick = () => {
-      const key = getStorageKey();
-      if (!key || !studentId.value.trim()) return alert("Enter Student ID");
-      const saved = localStorage.getItem(key);
-      if (!saved) return alert("No saved work");
-      const {data} = JSON.parse(saved);
-      studentId.value = data.studentId;
-      studentName.value = data.studentName;
-      className.value = data.className;
-      teacherSelect.value = data.teacher.id;
-      taskSelect.value = TASKS.find(t => t.name === data.taskName)?.id;
-      renderQuestions(getCurrentTask(), data.answers.reduce((o,a)=>(o[a.id]=a.answer,o),{}));
-      alert("Loaded!");
-    };
+  document.getElementById("form").classList.add("hidden");
+  document.getElementById("result").classList.remove("hidden");
+};
 
-    backButton.onclick = () => { summaryView.classList.add("hidden"); formView.classList.remove("hidden"); };
-    taskSelect.onchange = () => renderQuestions(getCurrentTask());
+window.back = function() {
+  document.getElementById("result").classList.add("hidden");
+  document.getElementById("form").classList.remove("hidden");
+};
 
-    emailButton.onclick = async () => {
-      if (!window.current) return alert("Submit first!");
-      const blob = await generatePDF(window.current.data, window.current.grade);
-      const reader = new FileReader();
-      reader.onload = () => {
-        const base64 = reader.result.split(',')[1];
-        const subject = encodeURIComponent(`${window.current.data.studentName} - ${window.current.data.taskName}`);
-        const body = encodeURIComponent(`Kia ora ${window.current.data.teacher.name},\n\nAttached is my work.\n\nGrade: ${window.current.grade.score} (${window.current.grade.letter}, ${window.current.grade.pct}%)\n\nNgā mihi,\n${window.current.data.studentName}`);
-        location.href = `mailto:${window.current.data.teacher.email}?subject=${subject}&body=${body}&attachment=data:application/pdf;base64,${base64}`;
-      };
-      reader.readAsDataURL(blob);
-    };
+window.emailWork = async function() {
+  if (!window.finalData) { alert("Submit first!"); return; }
 
-    // Start – just like your original working code
-    renderQuestions(getCurrentTask());
-  </script>
+  const doc = new jsPDF();
+  doc.setFontSize(20);
+  doc.text(window.finalData.name + " - Materials Self-Reflection", 105, 20, {align:"center"});
+  doc.setFontSize(16);
+  doc.text("Grade: " + window.finalData.points + "/37 (" + window.finalData.pct + "%)", 105, 35, {align:"center"});
+
+  let y = 50;
+  task.questions.forEach((q,i) => {
+    if (y > 270) { doc.addPage(); y = 20; }
+    doc.setFontSize(11);
+    doc.text("Q" + (i+1) + ": " + q.text, 15, y);
+    y += 8;
+    doc.setFont("helvetica","normal");
+    const lines = doc.splitTextToSize(getAnswer(q.id) || "(no answer)", 180);
+    lines.forEach(l => { doc.text(l, 20, y); y += 7; });
+    y += 10;
+  });
+
+  const blob = doc.output('blob');
+  const reader = new FileReader();
+  reader.onload = () => {
+    const base64 = reader.result.split(',')[1];
+    const subject = encodeURIComponent(window.finalData.name + " - BCATS Materials");
+    const body = encodeURIComponent(
+      "Kia ora " + window.finalData.teacher + ",\n\nPlease find my completed work attached.\n\nGrade: " + 
+      window.finalData.points + "/37 (" + window.finalData.pct + "%)\n\nNgā mihi,\n" + window.finalData.name
+    );
+    location.href = "mailto:" + window.finalData.email + "?subject=" + subject + "&body=" + body + 
+                    "&attachment=data:application/pdf;base64," + base64;
+  };
+  reader.readAsDataURL(blob);
+};
+</script>
 </body>
 </html>
