--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
     body {font-family:Arial,sans-serif;max-width:900px;margin:40px auto;padding:20px;background:#f9f9f9;color:#333;}
-    h1 {text-align:center;color:#2c3e50;}
-    .btn {display:block;width:100%;padding:18px;margin:20px 0;font-size:20px;border:none;border-radius:12px;color:white;cursor:pointer;}
-    .btn:hover {opacity:0.9;transform:scale(1.02);}
-    .purple {background:#8e44ad;}
-    .green {background:#27ae60;}
-    .orange {background:#e67e22;}
-    input,select,textarea {width:100%;padding:12px;margin:8px 0;border:2px solid #ddd;border-radius:8px;font-size:16px;}
-    .q {background:white;padding:15px;margin:15px 0;border-radius:10px;box-shadow:0 2px 10px rgba(0,0,0,0.1);}
-    .hidden {display:none;}
-    .secret {background:#fff3cd;padding:15px;border-left:5px solid #f39c12;text-align:center;font-weight:bold;}
+    h1,h2{text-align:center;color:#2c3e50;}
+    .btn{display:block;width:100%;padding:18px;margin:20px 0;font-size:20px;border:none;border-radius:12px;color:white;cursor:pointer;}
+    .btn:hover{opacity:0.9;transform:scale(1.02);}
+    .purple{background:#8e44ad;}.green{background:#27ae60;}.orange{background:#e67e22;}
+    input,select,textarea{width:100%;padding:12px;margin:8px 0;border:2px solid #ddd;border-radius:8px;font-size:16px;}
+    .q{background:white;padding:15px;margin:15px 0;border-radius:10px;box-shadow:0 2px 10px rgba(0,0,0,0.1);}
+    .hidden{display:none;}
+    .secret{background:#fff3cd;padding:15px;border-left:5px solid #f39c12;text-align:center;font-weight:bold;}
   </style>
 </head>
 <body>
@@ -31,8 +29,8 @@
   </select>
 
   <div class="secret">
-    Type the word "<span id="word"></span>" to prove it's your work:<br>
-    <input type="text" id="check" placeholder="type here">
+    Type "<span id="word"></span>" to prove it's your work:<br>
+    <input type="text" id="check" placeholder="secret word">
   </div>
 
   <div id="questions"></div>
@@ -48,28 +46,30 @@
   <button class="btn orange" onclick="back()">Edit Answers</button>
 </div>
 
-<!-- Load your questions.js first -->
+<!-- Load questions first -->
 <script src="questions.js"></script>
 
 <script>
 // Secret word
-const words = ["kiwi","tui","pohutukawa","manuka","kowhai","rata"];
+const words = ["kiwi","tui","pohutukawa","manuka","kowhai","rata","rimu","kauri"];
 const secret = words[Math.floor(Math.random()*words.length)];
 document.getElementById("word").textContent = secret;
 
 // Fill teacher dropdown
 TEACHERS.forEach(t => {
   const o = document.createElement("option");
-  o.value = t.email; o.textContent = t.name;
+  o.value = t.email;
+  o.textContent = t.name;
   document.getElementById("teacher").appendChild(o);
 });
 
 // Show questions
-const task = TASKS[0]; // Materials task
+const task = TASKS[0];
 task.questions.forEach((q,i) => {
   const div = document.createElement("div");
   div.className = "q";
-  div.innerHTML = `<strong>Q${i+1} (${q.maxPoints} pts)</strong><br>${q.text}<br>
+  div.innerHTML = `
+    <strong>Q${i+1} (${q.maxPoints} pts)</strong><br>${q.text}<br>
     ${q.type==="long" ? '<textarea rows="4" id="a'+q.id+'"></textarea>' : '<input type="text" id="a'+q.id+'">'}
   `;
   document.getElementById("questions").appendChild(div);
@@ -93,20 +93,31 @@ function gradeIt() {
   return score;
 }
 
+let finalData = null;
+
 window.submitWork = function() {
-  if (document.getElementById("check").value !== secret) {
-    alert("Secret word wrong! It is: " + secret);
+  if (document.getElementById("check").value.trim() !== secret) {
+    alert("Wrong secret word! It is: " + secret);
     return;
   }
-  if (!document.getElementById("name").value || !document.getElementById("id").value) {
-    alert("Name and ID required");
+  if (!document.getElementById("name").value || !document.getElementById("id").value || !document.getElementById("teacher").value) {
+    alert("Please fill Name, ID and Teacher");
     return;
   }
 
   const points = gradeIt();
   const pct = Math.round((points / 37) * 100);
 
-  document.getElementById("student").textContent = document.getElementById("name").value;
+  finalData = {
+    name: document.getElementById("name").value.trim(),
+    id: document.getElementById("id").value.trim(),
+    teacherName: document.getElementById("teacher").selectedOptions[0].textContent,
+    teacherEmail: document.getElementById("teacher").value,
+    points: points,
+    pct: pct
+  };
+
+  document.getElementById("student").textContent = finalData.name;
   document.getElementById("grade").textContent = points + "/37 (" + pct + "%)";
 
   document.getElementById("answers").innerHTML = "";
@@ -116,15 +127,6 @@ window.submitWork = function() {
     div.innerHTML = `<strong>Q${i+1}:</strong> ${q.text}<br><em>${getAnswer(q.id)||"(no answer)"}</em>`;
     document.getElementById("answers").appendChild(div);
   });
-
-  window.finalData = {
-    name: document.getElementById("name").value,
-    id: document.getElementById("id").value,
-    teacher: document.getElementById("teacher").selectedOptions[0].textContent,
-    email: document.getElementById("teacher").value,
-    points: points,
-    pct: pct
-  };
 
   document.getElementById("form").classList.add("hidden");
   document.getElementById("result").classList.remove("hidden");
@@ -136,39 +138,55 @@ window.back = function() {
 };
 
 window.emailWork = async function() {
-  if (!window.finalData) { alert("Submit first!"); return; }
+  if (!finalData) {
+    alert("Click 'Submit & Grade' first!");
+    return;
+  }
 
+  const { jsPDF } = window.jspdf;
   const doc = new jsPDF();
-  doc.setFontSize(20);
-  doc.text(window.finalData.name + " - Materials Self-Reflection", 105, 20, {align:"center"});
-  doc.setFontSize(16);
-  doc.text("Grade: " + window.finalData.points + "/37 (" + window.finalData.pct + "%)", 105, 35, {align:"center"});
+  let y = 30;
 
-  let y = 50;
+  doc.setFontSize(20);
+  doc.text(finalData.name + " - BCATS Materials", 105, y, {align:"center"});
+  y += 15;
+  doc.setFontSize(16);
+  doc.text("Grade: " + finalData.points + "/37 (" + finalData.pct + "%)", 105, y, {align:"center"});
+  y += 25;
+
   task.questions.forEach((q,i) => {
     if (y > 270) { doc.addPage(); y = 20; }
     doc.setFontSize(11);
+    doc.setFont("helvetica","bold");
     doc.text("Q" + (i+1) + ": " + q.text, 15, y);
     y += 8;
     doc.setFont("helvetica","normal");
     const lines = doc.splitTextToSize(getAnswer(q.id) || "(no answer)", 180);
-    lines.forEach(l => { doc.text(l, 20, y); y += 7; });
+    lines.forEach(line => {
+      doc.text(line, 20, y);
+      y += 7;
+    });
     y += 10;
   });
 
-  const blob = doc.output('blob');
+  const pdfBlob = doc.output('blob');
   const reader = new FileReader();
-  reader.onload = () => {
+  reader.onload = function() {
     const base64 = reader.result.split(',')[1];
-    const subject = encodeURIComponent(window.finalData.name + " - BCATS Materials");
+    const subject = encodeURIComponent(finalData.name + " - BCATS Materials Submission");
     const body = encodeURIComponent(
-      "Kia ora " + window.finalData.teacher + ",\n\nPlease find my completed work attached.\n\nGrade: " + 
-      window.finalData.points + "/37 (" + window.finalData.pct + "%)\n\nNgā mihi,\n" + window.finalData.name
+      "Kia ora " + finalData.teacherName + ",\n\n" +
+      "Please find my completed Materials self-reflection attached.\n\n" +
+      "Auto-Grade: " + finalData.points + "/37 (" + finalData.pct + "%)\n\n" +
+      "Ngā mihi,\n" + finalData.name
     );
-    location.href = "mailto:" + window.finalData.email + "?subject=" + subject + "&body=" + body + 
-                    "&attachment=data:application/pdf;base64," + base64;
+    const mailto = "mailto:" + finalData.teacherEmail +
+                   "?subject=" + subject +
+                   "&body=" + body +
+                   "&attachment=data:application/pdf;base64," + base64;
+    location.href = mailto;
   };
-  reader.readAsDataURL(blob);
+  reader.readAsDataURL(pdfBlob);
 };
 </script>
 </body>
